# regextual

./: pyproject.toml
regex-tester/: app.py
